assets/css/style.css
/*style applied to whole webpage*/
* {
    padding: 0;
    margin: 0;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

/*background color for body*/
body {
    background-color: #d9dcd6;
}

/*header section style*/
.header {
    padding: 20px;
    background-color: #2a607c;
    color: #ffffff;
}

/*style for heading in header element*/
.header h1 {
    display: inline-block;
    font-size: 48px;
    color: #d9dcd6;
}

/*style for section located inside header*/
.header nav {
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-size: 20px;
}

/*style for unordered list nav section inside header*/
.header nav ul {
    list-style-type: none;
}

/*style for unordered list items in header*/
.header nav ul li {
    display: inline-block;
    margin-left: 25px;
}

/*style for anchor elements*/
a {
    color: #ffffff;
    text-decoration: none;
}

/*style for all paragraph elements*/
p {
    font-size: 16px;
}

/*style for large image in section element*/
.hero {
    height: 800px;
    width: 100%;
    margin-bottom: 25px;
    background-image: url("../images/digital-marketing-meeting.jpg");
    background-size: cover;
    background-position: center;
}
/*style for content located inside the main element*/
.content {
    width: 70%;
    display: inline-block;
    margin-left: 20px;
    max-height: 30px;
}
/*style for elements in article elements*/
.search-engine-optimization,
.online-reputation-management,
.social-media-marketing {
    margin-bottom: 20px;
    padding: 50px;
    height: 228px;
    background-color: #0072bb;
    color: #ffffff;
}
/*style for image in search-engine-optimization image*/
.search-engine-optimization img {
    max-height: 200px;
    float: left;
    margin-right: 30px;
}
/*style for online-reputation image*/
.online-reputation-management img {
    max-height: 200px;
    float: right;
    margin-left: 30px;
}
/*style for social-media-marketing image*/
.social-media-marketing img {
    max-height: 200px;
    float: left;
    margin-right: 30px;
}
/*style for search-engine-optimization header*/
.search-engine-optimization h2 {
    margin-bottom: 20px;
    font-size: 36px;
}
/*style for online-reputation-management header*/
.online-reputation-management h2 {
    margin-bottom: 20px;
    font-size: 36px;
}
/*style for social-media-marketing header*/
.social-media-marketing h2 {
    margin-bottom: 20px;
    font-size: 36px;
}
/*style for 1st and 3rd paragragh in main element*/
.search-engine-optimization p,
.social-media-marketing p {
    text-align: left;
    margin: 30px;
}
/*style for aside element*/
.benefits {
    margin-right: 20px;
    padding: 15px;
    clear: both;
    float: right;
    width: 20%;
    height: 100%;
    background-color: #2589bd;
}
/*style for each class element located in aside parent element*/
.benefit-lead,
.benefit-brand,
.benefit-cost {
    margin-bottom: 14px;
    color: #ffffff;
}
/*style for headings for each class element located in aside*/
.benefit-lead h3,
.benefit-brand h3,
.benefit-cost h3 {
    margin-bottom: 10px;
    text-align: center;
}
/*style for 1st image in aside*/
.benefit-lead img {
    display: block;
    margin: 5px auto;
    max-width: 150px;
}
/*style for 2nd image in aside*/
.benefit-brand img {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}
/*style for 3rd image in aside*/
.benefit-cost img {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}
/*style for footer of page*/
.footer {
    padding: 30px;
    clear: both;
    text-align: center;
}
/*style for h2 located in footer element*/
.footer h2 {
    font-size: 20px;
}

